--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,74 @@
+# MacOS
 .DS_Store
 vim-tools_notiz.vim
+.DS_Store
+.vscode
+.vimspector.json
 push.sh
+
+# c, cpp
+*.x
+*.d
+*.dSYM
+*.o
+*.out
+
+# log
+*.log
+
+# cache
+*.cache
+cache/
+
+# Windows
+Thumbs.db
+Desktop.ini
+
+# Tags
+TAGS
+!TAGS/
+tags
+tags-cn
+!tags/
+.tags
+.tags1
+tags.lock
+tags.temp
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+cscope.files
+cscope.out
+cscope.in.out
+cscope.po.out
+
+# Vim
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
+# Test % Tmp
+test.*
+tmp.*
+temp.*
+
+# Java
+*.class
+
+# JavaScript
+node_modules
+
+# Python
+*.pyc
+.idea/
+/.idea
+build/
+__pycache__
+
+# Rust
+target/
+**/*.rs.bk
