FUNDING.yml modifiziert

--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,7 +1,6 @@
 ? custom
 : [
     "https://www.paypal.me/mctechnology17",
+    mctechnology17.com,
   ]
-community_bridge: vim-tools
-tidelift: mctechnology17/vim-tools
 github: mctechnology17
