--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,6 @@ vim-tools_notiz.vim
 push.sh
 /test
 test/
-/vim_installer
-vim_installer/
-doc/vim-tools.txt
 
 # c, cpp
 *.x
@@ -30,19 +27,19 @@ Thumbs.db
 Desktop.ini
 
 # Tags
-TAGS
-!TAGS/
-tags
-tags-cn
-!tags/
-.tags
-.tags1
-tags.lock
-tags.temp
-gtags.files
-GTAGS
-GRTAGS
-GPATH
+#TAGS
+#!TAGS/
+#tags
+#tags-cn
+#!tags/
+#.tags
+#.tags1
+#tags.lock
+#tags.temp
+#gtags.files
+#GTAGS
+#GRTAGS
+#GPATH
 cscope.files
 cscope.out
 cscope.in.out
