--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,5 +1,2 @@
-? custom
-: [
-    "https://www.paypal.me/mctechnology17",
-  ]
+custom: ["https://www.paypal.me/mctechnology17"]
 github: mctechnology17
