paypal link for sponsor added

--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,2 +1,4 @@
 custom: ["https://github.com/sponsors/mctechnology17"]
 github: mctechnology17
+custom: ["https://www.paypal.me/mctechnology17"]
+paypal: @mctechnology17
